--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
+    "dev": "tsc-watch --onSucess\"node .dist/index.js\"",
+    "build": "tsc",
+    "postinstall": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -19,12 +23,12 @@
   "homepage": "https://github.com/Rhaisssa/-challenge_API_Rest_Full#readme",
   "devDependencies": {
     "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.12",
+    "@types/cors": "^2.8.12", 
     "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
+    "@types/morgan": "^1.9.3", 
     "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+    "@typescript-eslint/eslint-plugin": "^5.29.0", 
+    "@typescript-eslint/parser": "^5.29.0", 
     "typescript": "^4.7.4"
   },
   "dependencies": {
@@ -34,5 +38,10 @@
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0"
+  },
+  "moduleAliases": {
+    "@/resources/*" : ["resources/*"],
+    "@/utils/*" : ["utils/*"],
+    "@/middleware/*" : ["middleware/*"]
   }
 }
