--- a/.env.exemple
+++ b/.env.exemple
@@ -1,4 +1,16 @@
 NODE_ENV=development
 PORT=3000
-MONGO_PATH=
 MONG_USER=
+            MONGO_NAME= 
+            MONGO_CPF= 
+            MONGO_BIRTHDATE= 
+            MONGO_EMAIL= 
+            MONGO_PASSWORD= 
+            MONGO_ADDRESS= 
+            MONGO_NUMBER= 
+            MONGO_COMPLEMENT= 
+            MONGO_CITY= 
+            MONGO_STATE= 
+            MONGO_COUNTRY= 
+            MONGO_ZIPCODE=
+MONGO_PATH=
