--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "cors": "^2.8.5",
     "envalid": "^7.3.1",
     "helmet": "^5.1.0",
+    "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
     "morgan": "^1.10.0"
