--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "joi": "^17.6.0",
     "module-alias": "^2.2.2",
     "mongoose": "^6.4.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "validate-cpf-joi": "^0.0.8"
   },
   "moduleAliases": {
     "@/resources/*": [
