--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "challenge_crud_api",
+  "name": "projetoapifull",
   "version": "1.0.0",
-  "type": "module",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
+    "compile": "tsc",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
-    "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "express-handlebars": "^6.0.6",
-    "mongoose": "^6.4.0"
+    "express": "^4.17.3",
+    "mongoose": "^6.2.6",
+    "nodemon": "^2.0.18",
+    "typescript": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
