--- a/package.json
+++ b/package.json
@@ -1,39 +1,24 @@
 {
-  "name": "-challenge_api_rest_full",
+  "name": "projetoapifull",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "compile": "tsc",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Rhaisssa/-challenge_API_Rest_Full.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Rhaisssa/-challenge_API_Rest_Full/issues"
-  },
-  "homepage": "https://github.com/Rhaisssa/-challenge_API_Rest_Full#readme",
-  "devDependencies": {
-    "@types/compression": "^1.7.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
+  "dependencies": {
+    "express": "^4.17.3",
+    "mongoose": "^6.2.6",
+    "nodemon": "^2.0.18",
     "typescript": "^4.7.4"
   },
-  "dependencies": {
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
-    "helmet": "^5.1.0",
-    "module-alias": "^2.2.2",
-    "mongoose": "^6.4.0",
-    "morgan": "^1.10.0"
+  "devDependencies": {
+    "@types/express": "^4.17.13"
   }
 }
