--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
+    "handlebars": "^4.7.7",
     "mongoose": "^6.2.6",
     "nodemon": "^2.0.18",
     "typescript": "^4.7.4"
