--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "url_launcher": "^5.4.0",
     "express": "^4.18.1",
     "handlebars": "^4.7.7",
     "mongoose": "^6.2.6",
